# Rosemary

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  Dockerfile  compose-dev.yml  compose-test.yml  compose.override.yml.example  compose.yml  justfile
.github/workflows/: ci.yml  docker-publish.yml  pr-title.yml  publish.yml  release.yml  ship.yml  test.yml
alpha-server/: pyproject.toml
alpha-server/src/alpha_server/: __init__.py  app.py  auth.py  clock.py  db.py  llm.py  origin_validation.py  settings.py
alpha-server/src/alpha_server/cortex/: __init__.py  add_to_diary.py  instructions.md  models.py  read_from_diary.py  search_memories.py  server.py
alpha-server/src/alpha_server/hooks/: __init__.py  anamneses.py  anamneses_system_prompt.md  memories.py  reflection.py  timestamp.py
alpha-server/src/alpha_server/utils/: __init__.py  _ssrf.py  fetch.py  models.py  server.py
alpha-server/tests/: test_fetch.py  test_read_from_diary.py
mechanism/: alembic.ini  pyproject.toml
mechanism/alembic/: env.py
mechanism/alembic/versions/: 1c388babb3a5_move_sage_tables_into_sage_schema.py  262d203b1d16_move_memories_into_cortex_schema.py  5cf9fe952732_baseline_existing_rosemary_public_schema.py  9b0c9c868756_create_cortex_and_sage_schemas.py  ced79d1d76e3_add_created_at_to_cortex_memories_.py  ea2a504655cd_create_cortex_diary_table.py
mechanism/evals/: README.md  dataset.py  extract_dataset.py  seed_cases.yaml
mechanism/evals/suites/memories/: dataset.py  task.py
mechanism/prompts/: anamneses_system.md  memories_system.md  reflection_user.md
mechanism/prompts/sage/: recall_system.md
mechanism/src/mechanism/: __init__.py  app.py  auth.py  clock.py  db.py  llm.py  origin_validation.py  redis_client.py  settings.py
mechanism/src/mechanism/cortex/: __init__.py  add_to_diary.py  get_memory.py  instructions.md  models.py  read_from_diary.py  recent_memories.py  search_memories.py  server.py  store_memory.py
mechanism/src/mechanism/hooks/: __init__.py  anamneses.py  memories.py  memories_system_prompt.md  reflection.py  timestamp.py
mechanism/src/mechanism/mechanism/: __init__.py  anamneses.py  memories.py  reflection.py  timestamp.py
mechanism/src/mechanism/sage/: __init__.py  instructions.md  recall.py  server.py
mechanism/src/mechanism/utils/: __init__.py  _ssrf.py  fetch.py  instructions.md  server.py
mechanism/tests/: conftest.py  test_add_to_diary.py  test_always_load_meta.py  test_anamneses.py  test_fetch.py  test_get_memory.py  test_hooks_memories.py  test_hooks_reflection.py  test_hooks_timestamp.py  test_livez.py  test_memories.py  test_read_from_diary.py  test_recent_memories.py  test_reflection.py  test_sage_recall.py  test_store_memory.py  test_store_memory_overflow.py  test_timestamp.py
mechanism/tests/fixtures/: generate.py  schema.sql  seed.sql  seed.sql.template
