[project]
name = "mechanism"
version = "0.0.1"
description = "Alpha's mechanism"
requires-python = ">=3.12"
dependencies = [
    "asyncpg>=0.29",
    "dateparser>=1.2",
    "fastapi>=0.115",
    "fastmcp>=2.0",
    "httpx>=0.28",
    "logfire[asyncpg,fastapi,httpx]>=3.0",
    "numpy>=2.0",
    "openai>=1.0",
    "pendulum>=3.0",
    "pgvector>=0.3",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "redis>=5.0",
    "trafilatura>=2.0",
    "uvicorn[standard]>=0.32",
]

[dependency-groups]
dev = [
    "basedpyright>=1.20",
    "pre-commit>=3.7",
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "respx>=0.22",
    "ruff>=0.6",
    "asyncpg-stubs>=0.31",
]

[build-system]
requires = ["uv_build>=0.5,<0.12"]
build-backend = "uv_build"

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "UP",   # pyupgrade
    "S",    # flake8-bandit
    "SIM",  # flake8-simplify
    "RUF",  # Ruff-specific
    "D",    # pydocstyle
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["D104"]
"__main__.py" = ["D100"]
"tests/**/*.py" = ["S101", "D100", "D101", "D102", "D103"]

[tool.basedpyright]
include = ["src", "tests"]
pythonVersion = "3.12"
typeCheckingMode = "recommended"
reportMissingImports = "error"

# `Any` is the honest type for the wire boundary — JSON arrives shape-unknown
# and Pydantic narrows it. We're a two-person workshop; we don't need a
# linter babysitting our use of `Any` at boundaries we control.
reportExplicitAny = false
reportAny = false
