[project]
name = "mechanism"
version = "1.1.0"
description = "Alpha's mechanism"
requires-python = ">=3.12"
dependencies = [
    "asyncpg>=0.29",
    "dateparser>=1.2",
    "fastmcp>=2.0",
    "httpx>=0.28",
    "logfire[asyncpg,httpx]>=3.0",
    "numpy>=2.0",
    "openai>=1.0",
    "pendulum>=3.0",
    "pgvector>=0.3",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "redis>=5.0",
    "trafilatura>=2.0",
    "uvicorn[standard]>=0.32",
]

[dependency-groups]
dev = [
    "basedpyright>=1.20",
    "pre-commit>=3.7",
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "respx>=0.22",
    "ruff>=0.6",
    "asyncpg-stubs>=0.31",
    "testcontainers[postgres,redis]>=4.14.2",
]

eval = [
    "pydantic-evals[logfire]>=1.102.0",
]

migrations = [
    "alembic>=1.18.4",
    "psycopg[binary]>=3.3.4",
]

[build-system]
requires = ["uv_build>=0.5,<0.12"]
build-backend = "uv_build"

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "UP",   # pyupgrade
    "S",    # flake8-bandit
    "SIM",  # flake8-simplify
    "RUF",  # Ruff-specific
    "D",    # pydocstyle
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["D104"]
"__main__.py" = ["D100"]
"tests/**/*.py" = ["S101", "S106", "S603", "S607", "D100", "D101", "D102", "D103"]
# Alembic stamps revision metadata into the module docstring; its first line
# (the migration message) won't always end in punctuation.
"alembic/versions/*.py" = ["D415"]

[tool.basedpyright]
include = ["src", "tests"]
pythonVersion = "3.12"
typeCheckingMode = "recommended"
reportMissingImports = "error"

# `Any` is the honest type for the wire boundary — JSON arrives shape-unknown
# and Pydantic narrows it. We're a two-person workshop; we don't need a
# linter babysitting our use of `Any` at boundaries we control.
reportExplicitAny = false
reportAny = false

# python-semantic-release config. The release workflow (.github/workflows/release.yml)
# runs `semantic-release version` from this directory on push to main; it parses
# Conventional Commits since the last tag, bumps `version` above, regenerates the
# repo-root CHANGELOG.md, commits the changes, creates the git tag, and creates
# a GitHub Release. Tag push then triggers .github/workflows/docker-publish.yml,
# which builds and pushes the image to GHCR.
[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
branch = "main"
build_command = ""                          # we don't build a wheel — application, not library
upload_to_pypi = false
upload_to_vcs_release = true                # attach autogen notes to the GitHub Release
commit_parser = "conventional"
# No `[skip ci]` — that flag, on a `git push origin main --tags`, suppresses
# ALL workflows for the push including the tag-push event, which would mean
# docker-publish.yml (listening on `tags: ['v*']`) never fires. To prevent
# release.yml from triggering recursively on PSR's own commit, see the actor
# guard in `.github/workflows/release.yml`.
commit_message = "chore(release): {version}"
tag_format = "v{version}"
# Stay in 0.x if we ever go back there. (Currently irrelevant — we're at 1.x —
# but documents the intent and protects future 0.x experimentation.) With the
# default `major_on_zero = true`, the FIRST minor bump in 0.x promotes to 1.0.0
# (PSR interprets "minor in 0.x" as the project asserting stability). Setting
# false keeps minor and breaking changes inside 0.x until we explicitly graduate.
major_on_zero = false

[tool.semantic_release.changelog]
changelog_file = "../CHANGELOG.md"          # at repo root, not inside mechanism/
exclude_commit_patterns = ['''^chore\(release\):''']
